--- a/docs/management/action-types.asciidoc
+++ b/docs/management/action-types.asciidoc
@@ -111,11 +111,11 @@ image::images/connector-select-type.png[Connector select type]
 === Importing and exporting connectors
 
 To import and export rules, use the <<managing-saved-objects, Saved Objects Management UI>>.
-After the succesful import the proper banner will be displayed:
+After a successful import, the proper banner is displayed:
 [role="screenshot"]
 image::images/coonectors-import-banner.png[Connectors import banner]
 
-Connectors with the missing user sensitive information due to the import will be shown with the 'Fix' button in the list:
+If a connector is missing user sensitive information because of the import,  a **Fix** button appears in the list view.
 [role="screenshot"]
 image::images/connectors-with-missing-secrets.png[Connectors with missing secrets]
 
