--- a/docs/management/action-types.asciidoc
+++ b/docs/management/action-types.asciidoc
@@ -113,7 +113,7 @@ image::images/connector-select-type.png[Connector select type]
 To import and export rules, use the <<managing-saved-objects, Saved Objects Management UI>>.
 After a successful import, the proper banner is displayed:
 [role="screenshot"]
-image::images/coonectors-import-banner.png[Connectors import banner]
+image::images/coonectors-import-banner.png[Connectors import banner, width=50%]
 
 If a connector is missing user sensitive information because of the import,  a **Fix** button appears in the list view.
 [role="screenshot"]
