fix missing bold

--- a/dev_docs/tutorials/sample_data.mdx
+++ b/dev_docs/tutorials/sample_data.mdx
@@ -12,7 +12,7 @@ tags: ['kibana', 'onboarding', 'dev', 'architecture', 'tutorials']
 1. Navigate to the home page
 2. Click **Add data**
 3. Click on the **Sample data** tab
-4. Select a dataset by clicking on the "Add data" button
+4. Select a dataset by clicking on the **Add data** button
 
 ![Sample Data](../assets/sample_data.png)
 
