[packages] Move @kbn/telemetry-tools to Bazel (#99726) (#99929)
Co-authored-by: Jonathan Budzenski <jon@budzenski.me>

--- a/docs/developer/getting-started/monorepo-packages.asciidoc
+++ b/docs/developer/getting-started/monorepo-packages.asciidoc
@@ -89,6 +89,7 @@ yarn kbn watch-bazel
 - @kbn/securitysolution-io-ts-utils
 - @kbn/securitysolution-utils
 - @kbn/std
+- @kbn/telemetry-utils
 - @kbn/tinymath
 - @kbn/utility-types
 - @kbn/utils
