--- a/dev_docs/tutorials/kibana_page_template.mdx
+++ b/dev_docs/tutorials/kibana_page_template.mdx
@@ -94,7 +94,7 @@ If you need to custom side bar content, you will need to pass you own navigation
 When using `EuiSideNav`, root level items should not be linked but provide section labelling only.
 
 ```tsx
-<KibanaPageLayout
+<KibanaPageTemplate
   solutionNav={{
     name: 'Management',
     icon: 'managementApp',
@@ -110,7 +110,7 @@ When using `EuiSideNav`, root level items should not be linked but provide secti
   }}
 >
   {...}
-</KibanaPageLayout>
+</KibanaPageTemplate>
 ```
 
 
