Apply suggestions from code review
Co-authored-by: Michail Yasonik <michail@yasonik.com>

--- a/dev_docs/tutorials/kibana_page_template.mdx
+++ b/dev_docs/tutorials/kibana_page_template.mdx
@@ -114,6 +114,6 @@ When using `EuiSideNav`, root level items should not be linked but provide secti
 ```
 
 
-![Screenshot of Stack Management empty state with a provided solution navigation.](../assets/kibana_template_solution_nav.png)
+![Screenshot of Stack Management empty state with a provided solution navigation shown on the left, outlined in pink.](../assets/kibana_template_solution_nav.png)
 
-![Screenshots of Stack Management page in mobile view. One with the menu closed, one with it open.](../assets/kibana_template_solution_nav_mobile.png)
+![Screenshots of Stack Management page in mobile view. Menu closed on the left, menu open on the right.](../assets/kibana_template_solution_nav_mobile.png)
