[DOCS] Fix capitalization in ML PRs

--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -204,12 +204,12 @@ Lens & Visualizations::
 * Enable `dual mode`, support index patterns and strings in *TSVB* {kibana-pull}92812[#92812]
 Machine Learning::
 * Anomaly detection rule lookback interval improvements {kibana-pull}97370[#97370]
-* Adds Network ML module with four ML jobs for ECS network data {kibana-pull}96480[#96480]
+* Adds network ML module with four ML jobs for ECS network data {kibana-pull}96480[#96480]
 * Adds runtime support for anomaly charts & add composite validations {kibana-pull}96348[#96348]
-* Data Frame Analytics: adds support for runtime fields {kibana-pull}95734[#95734]
+* Data frame analytics: Adds support for runtime fields {kibana-pull}95734[#95734]
 * Adds Anomaly Explorer charts embeddable {kibana-pull}94396[#94396]
-* Data Frame Analytics creation wizard: add validation step (Part 1) {kibana-pull}93478[#93478]
-* Adding support for saved object based ml modules {kibana-pull}92855[#92855]
+* Data frame analytics creation wizard: Add validation step (part 1) {kibana-pull}93478[#93478]
+* Adding support for saved object based ML modules {kibana-pull}92855[#92855]
 Metrics::
 * Observability Overview Host Summary {kibana-pull}90879[#90879]
 Platform::
@@ -289,23 +289,23 @@ Logs::
 * Adds error.stack_trace to the default log formatter {kibana-pull}94906[#94906]
 * Support Kibana index patterns in the Logs UI settings UI {kibana-pull}94849[#94849]
 Machine Learning::
-* UI enhancements for Anomaly detection rule type {kibana-pull}97626[#97626]
-* Persist Apply time range switch setting in Anomaly Detection job selector flyout {kibana-pull}97407[#97407]
+* UI enhancements for anomaly detection rule type {kibana-pull}97626[#97626]
+* Persist apply time range switch setting in anomaly detection job selector flyout {kibana-pull}97407[#97407]
 * Anomaly detection rule lookback interval improvements {kibana-pull}97370[#97370]
-* Adds annotation markers to the Anomaly Swimlane axis {kibana-pull}97202[#97202]
-* Data Frame Analytics: Ensure creation and results views display nested fields correctly {kibana-pull}96905[#96905]
+* Adds annotation markers to the anomaly swim lane axis {kibana-pull}97202[#97202]
+* Data frame analytics: Ensure creation and results views display nested fields correctly {kibana-pull}96905[#96905]
 * Adds commonly used ranges to date picker {kibana-pull}96501[#96501]
-* Adds Network ML module with four ML jobs for ECS network data {kibana-pull}96480[#96480]
+* Adds network ML module with four ML jobs for ECS network data {kibana-pull}96480[#96480]
 * Adds runtime support for anomaly charts & add composite validations {kibana-pull}96348[#96348]
-* Data Frame Analytics: add accuracy and recall stats to results view {kibana-pull}96270[#96270]
-* Data Frame Analytics: adds support for runtime fields {kibana-pull}95734[#95734]
-* Adds Anomaly charts embeddables to Dashboard from Anomaly Explorer page {kibana-pull}95623[#95623]
+* Data frame analytics: Add accuracy and recall stats to results view {kibana-pull}96270[#96270]
+* Data frame analytics: Adds support for runtime fields {kibana-pull}95734[#95734]
+* Adds anomaly charts embeddables to Dashboard from Anomaly Explorer page {kibana-pull}95623[#95623]
 * Adds search time runtime support for index based Data Visualizer {kibana-pull}95252[#95252]
 * Adding ML module asset type {kibana-pull}94950[#94950]
-* Data Frame Analytics: Fix ROC Curve Chart for binary classification {kibana-pull}94791[#94791]
+* Data frame analytics: Fix ROC curve chart for binary classification {kibana-pull}94791[#94791]
 * Adds Anomaly Explorer charts embeddable {kibana-pull}94396[#94396]
-* Data Frame Analytics creation wizard: add validation step (Part 1) {kibana-pull}93478[#93478]
-* Adding support for saved object based ml modules {kibana-pull}92855[#92855]
+* Data frame analytics creation wizard: Add validation step (part 1) {kibana-pull}93478[#93478]
+* Adding support for saved object based ML modules {kibana-pull}92855[#92855]
 * Rename advanced setting ml:fileDataVisualizerMaxFileSize to fileUpload:maxFileSize and increase max geojson upload size to 1GB {kibana-pull}92620[#92620]
 * Use indices options in anomaly detection job wizards {kibana-pull}91830[#91830]
 Management::
@@ -444,26 +444,26 @@ Logs::
 * Hide Create Alert option when user lacks privileges {kibana-pull}92000[#92000]
 Machine Learning::
 * Fixes alerting rule preview {kibana-pull}98907[#98907]
-* Data Frame Analytics: Fix special character escaping for Vega scatterplot matrix {kibana-pull}98763[#98763]
-* Disable Single Metric Viewer and Anomaly explorer charts for nested terms aggregations {kibana-pull}98510[#98510]
+* Data frame analytics: Fix special character escaping for Vega scatterplot matrix {kibana-pull}98763[#98763]
+* Disable Single Metric Viewer and Anomaly Explorer charts for nested terms aggregations {kibana-pull}98510[#98510]
 * Fixes Single Metric Viewer and Anomaly Explorer charts still loading even after failure {kibana-pull}98490[#98490]
 * Improve check for runtime fields in datafeed query {kibana-pull}98289[#98289]
-* Fixes Anomaly swim lane embeddable data fetch on minor resize {kibana-pull}98258[#98258]
+* Fixes anomaly swim lane embeddable data fetch on minor resize {kibana-pull}98258[#98258]
 * Fixes Single Metric Viewer annotation tooltip hard to trigger {kibana-pull}98233[#98233]
 * Fixes Single Metric Viewer forecast bounds being cut off in time slider in context chart {kibana-pull}98027[#98027]
-* DF Analytics map: deselect node after node action or flyout close {kibana-pull}97922[#97922]
-* Data frame analytics wizard: ensure progress is updated correctly {kibana-pull}97889[#97889]
+* Data frame analytics map: Deselect node after node action or flyout close {kibana-pull}97922[#97922]
+* Data frame analytics wizard: Ensure progress is updated correctly {kibana-pull}97889[#97889]
 * Fixing categorization job wizard with CCS {kibana-pull}97855[#97855]
 * Fixes Anomaly Detection job model memory limit input editable when datafeed is open {kibana-pull}97723[#97723]
 * Fixes Data Visualizer event rate chart empty for some indices when using long time range {kibana-pull}97655[#97655]
-* Fixes vertical overflow of the Anomaly swim lane embeddable {kibana-pull}97127[#97127]
+* Fixes vertical overflow of the anomaly swim lane embeddable {kibana-pull}97127[#97127]
 * Ensure ROC chart gets loaded correctly {kibana-pull}96890[#96890]
 * Fixes check for too many selected buckets in Anomaly Explorer charts {kibana-pull}96771[#96771]
 * Excludes metadata fields from jobs caps fields service response {kibana-pull}96548[#96548]
-* Fixes switches positioning on the Transform and DFA wizards {kibana-pull}96535[#96535]
-* Data Frame Analytics exploration: ensure training filters work as expected {kibana-pull}96500[#96500]
-* Fixes Anomaly Detection wizard full time range chart blank with saved search containing runtime fields {kibana-pull}95700[#95700]
-* Adds pagination control to datavisualizer failures to rendering all errors at a single time {kibana-pull}93839[#93839]
+* Fixes switches positioning on the transform and data frame analytics wizards {kibana-pull}96535[#96535]
+* Data frame analytics exploration: Ensure training filters work as expected {kibana-pull}96500[#96500]
+* Fixes anomaly detection wizard full time range chart blank with saved search containing runtime fields {kibana-pull}95700[#95700]
+* Adds pagination control to Data Visualizer failures to rendering all errors at a single time {kibana-pull}93839[#93839]
 * Fixes styling of Single Metric Viewer chart for dark theme {kibana-pull}93581[#93581]
 Management::
 * Transforms: Fix handling of fields with keyword mapping available {kibana-pull}98882[#98882]
