--- a/docs/settings/alert-action-settings.asciidoc
+++ b/docs/settings/alert-action-settings.asciidoc
@@ -70,7 +70,7 @@ You can configure the following settings in the `kibana.yml` file.
 xpack.actions.customHostSettings:
   - url: smtp://mail.example.com:465
     tls: 
-      verificationMode: 'certificate'
+      verificationMode: 'full'
       certificateAuthoritiesFiles: [ 'one.crt' ]
       certificateAuthoritiesData: |
           -----BEGIN CERTIFICATE-----
@@ -117,10 +117,15 @@ xpack.actions.customHostSettings:
   The options `smtp.ignoreTLS` and `smtp.requireTLS` can not both be set to true.
 
 | `xpack.actions.customHostSettings[n]`
-`.tls.rejectUnauthorized` {ess-icon}
+`.tls.rejectUnauthorized` [Deprecated. Use `xpack.actions.customHostSettings.tls.verificationMode`] {ess-icon}
   | A boolean value indicating whether to bypass server certificate validation.
   Overrides the general `xpack.actions.rejectUnauthorized` configuration
   for requests made for this hostname/port.
+
+| `xpack.actions.customHostSettings[n]`
+`.tls.verificationMode`
+  | Controls the verification of the server certificate that {hosted-ems} receives when making an outbound SSL/TLS connection to {es}. Valid values are "`full`", "`certificate`", and "`none`". 
+  Using "`full`" performs hostname verification, using "`certificate`" skips hostname verification, and using "`none`" skips verification entirely. *Default: `full`*. <<elasticsearch-ssl-verificationMode,Equivalent {kib} setting>>.
 
 | `xpack.actions.customHostSettings[n]`
 `.tls.certificateAuthoritiesFiles`
@@ -157,17 +162,27 @@ xpack.actions.customHostSettings:
 | `xpack.actions.proxyHeaders` {ess-icon}
   | Specifies HTTP headers for the proxy, if using a proxy for actions. Defaults to {}.
 
-[Legacy. Use `ssl.verificationMode` configuration instead.]
-| `xpack.actions.`
-`proxyRejectUnauthorizedCertificates` {ess-icon}
+a|`xpack.actions.`
+`proxyRejectUnauthorizedCertificates` [Deprecated Use `xpack.actions.tls.proxyVerificationMode`.] {ess-icon}
   | Set to `false` to bypass certificate validation for the proxy, if using a proxy for actions. Defaults to `true`.
 
-[Legacy. Use `ssl.verificationMode` configuration instead.]
-| `xpack.actions.rejectUnauthorized` {ess-icon}
+a|`xpack.actions[n]`
+`.tls.proxyVerificationMode` {ess-icon}
+| Controls the verification for the proxy server certificate that {hosted-ems} receives when making an outbound SSL/TLS connection to {es}. Valid values are "`full`", "`certificate`", and "`none`". 
+  Using "`full`" performs hostname verification, using "`certificate`" skips hostname verification, and using "`none`" skips verification entirely. *Default: `full`*. <<elasticsearch-ssl-verificationMode,Equivalent {kib} setting>>.
+
+| `xpack.actions.rejectUnauthorized` [Deprecated. Use `xpack.actions.tls.verificationMode`.] {ess-icon}
   | Set to `false` to bypass certificate validation for actions. Defaults to `true`. +
   +
   As an alternative to setting `xpack.actions.rejectUnauthorized`, you can use the setting
   `xpack.actions.customHostSettings` to set TLS options for specific servers.
+
+a|`xpack.actions[n]`
+`.tls.verificationMode` {ess-icon}
+| Controls the verification for the server certificate that {hosted-ems} receives when making an outbound SSL/TLS connection to {es}. Valid values are "`full`", "`certificate`", and "`none`". 
+  Using "`full`" performs hostname verification, using "`certificate`" skips hostname verification, and using "`none`" skips verification entirely. *Default: `full`*. <<elasticsearch-ssl-verificationMode,Equivalent {kib} setting>>.
+
+
 
 | `xpack.actions.maxResponseContentLength` {ess-icon}
   | Specifies the max number of bytes of the http response for requests to external resources. Defaults to 1000000 (1MB).
